[PN-82] feat: 테스트용 인메모리 DB 설정 파일 - 테스트용 application.yml 및 redis-local 파일 생성